--- a/style.css
+++ b/style.css
@@ -1,6 +1,180 @@
 @charset "UTF-8";
 
-/* BasicStyle */
+html {
+  font-size: 100%;
+}
+body {
+  background-color: #fdf8f8;
+  color: #333;
+  font-family: "YuGothic", "Yu Gothic", sans-serif;
+}
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+li {
+  list-style: none;
+}
+a {
+  color: #333;
+  text-decoration: none;
+}
+a:hover {
+  opacity: 0.7;
+}
+
+.wrapper {
+  max-width: 1040px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+/*-------------------------------------------------
+
+Header
+
+-------------------------------------------------*/
+#header .logo {
+  width: 100%;
+  max-width: 120px;
+  line-height: 0;
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  z-index: 50;
+}
+#header .logo a {
+  display: block;
+}
+/*------------------------------------------------
+
+MainVisual
+
+------------------------------------------------*/
+.mainvisual img {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+/*-------------------------------------------------
+
+Concept
+
+-------------------------------------------------*/
+.concept {
+  padding-top: 130px;
+  padding-bottom: 130px;
+  position: relative;
+}
+.concept .img {
+  max-width: 720px;
+}
+.concept .text {
+  max-width: 600px;
+  background-color: rgba(238, 238, 238, 0.8);
+  padding: 30px;
+  position: absolute;
+  top: 150px;
+  right: 0;
+}
+.concept .text .section-title {
+  font-family: "YuMincho", "Yu Mincho", serif;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+.concept .text .description {
+  font-size: 15px;
+  line-height: 1.8;
+  text-align: justify;
+}
+/*------------------------------------------------
+
+NewProducts
+
+------------------------------------------------*/
+.new-products {
+  background-color: #f4eaea;
+  padding: 130px 0;
+}
+.new-products .section-title {
+  font-family: "YuMincho", "Yu Mincho", serif;
+  font-size: 80px;
+  font-weight: normal;
+  letter-spacing: 0.1em;
+  line-height: 1.2;
+  margin-bottom: 40px;
+}
+.new-products .img-group {
+  height: 890px;
+  position: relative;
+}
+/*------------------------------------------------
+
+New Type
+
+------------------------------------------------*/
+.new-type {
+  display: flex;
+  align-items: center;
+  padding: 130px 0;
+}
+.new-type .text {
+  width: 50%;
+}
+.new-type .text .text-inner {
+  max-width: 520px;
+  padding: 0 60px 0 20px;
+  margin-left: auto;
+}
+.new-type .text .section-title {
+  font-family: "YuMincho", "Yu Mincho", serif;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+.new-type .text .description {
+  font-size: 15px;
+  line-height: 1.8;
+  text-align: justify;
+}
+.new-type .img {
+  width: 50%;
+}
+.new-type .img img {
+  height: 480px;
+  object-fit: cover;
+  object-position: left;
+}
+/*------------------------------------------------
+
+Footer
+
+------------------------------------------------*/
+#footer {
+  background-color: #666;
+  padding: 30px 0;
+}
+#footer .inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#footer .logo {
+  max-width: 130px;
+}
+#footer .copyright {
+  color: #fff;
+  font-size: 12px;
+}
+
+/*-------------------------------------------------
+
+BasicStyle
+
+-------------------------------------------------*/
 body {
   padding: 1rem;
   overflow-x: hidden;
@@ -23,7 +197,7 @@ h2 {
 
 .marquee-inner {
   display: flex;
-  animation: marquee 20s linear inifinite;
+  animation: marquee 20s linear infinite;
 }
 
 @keyframes marquee {
@@ -50,7 +224,7 @@ h2 {
 }
 
 .marquee-inner-stop img:hover {
-  scale: 1.1;
+  scale: 1.4;
 }
 
 /* 停止時クラス */
